<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left|center_vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:baselineAligned="true"
            >

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="left|center_vertical"
                android:layout_marginTop="18dp"
                android:gravity="center_vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/activity_user_info_basic_info"
                    android:layout_gravity="center_vertical|left"
                    android:textSize="14sp"
                    android:textColor="#319da6"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="#593b10"
                android:baselineAligned="false"
                />

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_marginTop="4dp">

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|bottom|left|top"
                    android:orientation="vertical">

                <ImageView
                        android:id="@+id/activity_userinfo_emp_imageview"
                        android:layout_width="100dp"
                        android:layout_height="120dp"
                        android:src="@android:drawable/ic_lock_idle_alarm"
                        android:background="#9fa2a2"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:layout_marginLeft="4dp">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_userinfo_username_textview_text"
                        android:ems="10"
                        android:id="@+id/activity_userinfo_username_textview"
                        android:layout_gravity="center_horizontal|left"
                        android:longClickable="false"
                        android:gravity="left"
                        android:textColor="#7a7d7c"
                        android:textSize="14sp"
                        android:clickable="true"
                        android:layout_margin="8dp"
                        />

                <TextView
                        android:id="@+id/activity_userinfo_department_textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#7a7d7c"
                        android:layout_gravity="center|left"
                        android:text="@string/activity_userinfo_department_textview_text"
                        android:textSize="14sp"
                        android:layout_margin="8dp"/>

                <TextView
                        android:id="@+id/activity_userinfo_title_textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#7a7d7c"
                        android:layout_gravity="center|left"
                        android:text="@string/activity_userinfo_title_textview_text"
                        android:textSize="14dp"
                        android:layout_margin="8dp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="left|center_vertical"
                android:layout_marginTop="18dp"
                android:gravity="center_vertical"
                >

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/activity_user_info_tel"
                    android:layout_gravity="center_vertical|left"
                    android:textSize="14sp"
                    android:textColor="#319da6"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="#593b10"
                android:baselineAligned="false"
                />

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left|top"
                android:background="#cecece"
                android:layout_marginTop="4dp"
                android:baselineAligned="false">

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <TextView
                        android:layout_width="60dp"
                        android:layout_height="36dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/activity_userinfo_mobile_text"
                        android:background="#7a7d7c"
                        android:layout_gravity="bottom|top"
                        android:gravity="center_vertical|center_horizontal"
                        android:textSize="14sp"
                        android:clickable="true"/>
            </LinearLayout>

            <TextView
                    android:id="@+id/activity_userinfo_mobile_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:ems="10"
                    android:layout_marginLeft="16dp"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left|top"
                android:background="#cecece"
                android:layout_marginTop="4dp">

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <TextView
                        android:layout_width="60dp"
                        android:layout_height="36dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/activity_userinfo_tel_text"
                        android:layout_gravity="bottom|top"
                        android:gravity="center_vertical|center_horizontal"
                        android:background="#7a7d7c"
                        android:textSize="14sp"/>
            </LinearLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:ems="10"
                    android:id="@+id/activity_userinfo_telnum_textview"
                    android:layout_marginLeft="16dp"
                    android:textColor="#555551"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="left|center_vertical"
                android:layout_marginTop="18dp"
                android:gravity="center_vertical"
                >

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/activity_userinfo_mail_text"
                    android:layout_gravity="center_vertical|left"
                    android:textSize="14sp"
                    android:textColor="#319da6"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="#593b10"
                android:baselineAligned="false"
                />

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left|top"
                android:background="#cecece"
                android:layout_marginTop="4dp">

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <TextView
                        android:layout_width="60dp"
                        android:layout_height="36dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/activity_userinfo_email_text"
                        android:layout_gravity="bottom|top"
                        android:gravity="center_vertical|center_horizontal"
                        android:background="#7a7d7c"
                        android:textSize="15sp"/>
            </LinearLayout>

            <TextView
                    android:id="@+id/activity_userinfo_mail_textview"
                    android:layout_width="184dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_marginLeft="16dp"
                    android:text="zhangzhangzhang@gdepb.gov.cn"
                    android:ellipsize="marquee"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>